<resources>
    <string name="app_name">Aegis</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Admin password</string>
    <string name="action_sign_in">Confirm</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Main activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_registered">Devices</string>
    <string name="tab_pending">Pending</string>
    <string name="label_registered_dev">Registered devices:</string>
    <string name="label_pending_dev">Devices pending registration:</string>

    <!-- Device Settings -->
    <string name="title_activity_device_settings">Device Settings</string>
    <string name="lock_vt">Lock VT</string>
    <string name="lock_ssh">Lock SSH</string>
    <string name="lock_all">Lock All</string>
    <string name="unlock_all">Unlock All</string>
    <string name="lock_section">Lock status</string>
    <string name="confirm">Confirm</string>
    <string name="device_management">Device management</string>
    <string name="device_information">Device information</string>
    <string name="unlink_device">Unlink device</string>
    <string name="loading">Loading...</string>
    <string name="last_status_change">Last status change</string>
    <string name="websocket_status">Websocket status</string>
    <string name="decoy_framebuffer">Decoy framebuffer</string>
    <string name="saved_snapshots">Storage</string>
    <string name="show_pictures">Show pictures</string>
    <string name="clear_pics_storage">Discard pictures</string>
    <string name="power">Power</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="webcam_picture">Webcam picture</string>
    <string name="show_event_log">Show event log</string>
    <string name="discard_log">Discard log</string>
</resources>